AA color contrast corrected and tag main closed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -439,9 +439,10 @@ thead > :nth-child(2) > :not(th:first-child){
     margin-bottom: 1rem;
 }
 .directory-cards p, .directory-cards a{
-    color: rgb(202, 210, 197);
+    color: #effdff;
     padding: .5rem;
-    font-weight: 500;
+    font-weight: 700;
+    font-size: 20px;
 }
 .directory-cards a{
     text-decoration: underline;
